# resume_rocket_fuel

./: README.md  pyproject.toml
src/resume_rocket_fuel/: crew.py  frontend_streamlit.py  pdf_export.py  pipeline.py
src/resume_rocket_fuel/config/: agents.yaml  tasks.yaml
src/resume_rocket_fuel/output/: company_profile_report.md  cv_analysis_suggestions.md  domain_expert_suggestions.md  final_cv.md  final_polished_cv.html  upload_materials.md
